🤗🌦 Updated with Glitch

--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,18 @@
 
    <body>
       <div class="container">
-         <h1>Manage Node.js projects and npm packages using package.json</h1>
-         <h3>Part 1 of Free Code Camp Backend Challenges</h3>
+         <h1>FreeCodeCamp API Basejump: Request Header Parser</h1>
+         <h3>User Stories</h3>
+          <ul>
+            <li>I can get the IP address, language and operating system for my browser.</li>
+          </ul>
+        <h3>Get Info For Browser</h3>
+        <p>
+          https://fcc-ian-request-header.glitch.me/api/whoami
+        </p>
+      </div>
+      <div id="madeby">
+        <h6>Made by <a href="https://www.freecodecamp.org/irichard620" alt="Ian's FCC" id="fcc-link">Ian Richard</a></h6>
       </div>
    </body>
-
 </html>
